--- a/views/User/signUp.ejs
+++ b/views/User/signUp.ejs
@@ -9,11 +9,11 @@
         box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
     }
 
-    .form-container{
+    .form-container-1{
         min-height: 80vh;
     }
 </style>
-<div class="container form-container mt-5 d-flex justify-content-center align-items-center">
+<div class="container form-container-1 mt-5 d-flex justify-content-center align-items-center">
 
 
 <div class="login-form container-md px-4 py-5">
