--- a/views/home.ejs
+++ b/views/home.ejs
@@ -1,2 +1,9 @@
 <%- layout('./layout/boilerplate.ejs') %>
+<main class="container-fluid d-flex justify-content-center align-items-center" style="height: 93.8vh; background-color: var(--secondary);">
+    <div class="d-flex flex-column align-items-center" style="gap: 10px;">
+        <img src="/images/flow.gif" alt=""style="height: 15em; aspect-ratio: 1/1; object-fit:contain;">
+        <a class="btn btn-sm btn-primary w-25" href="/blog" style="min-width: fit-content;">Visit Website</a>
+    </div>
+</main>
+
 
