--- a/public/stylesheet/style.css
+++ b/public/stylesheet/style.css
@@ -1,7 +1,7 @@
 :root{
     --primary: #1E3A8A;
-    --secondary: #E5E7EB;
-    --accent-color: #3B82F6;
+    --secondary: #e5e8eb;
+    --accent-color: #316cd1;
 }
 
 html{
@@ -114,3 +114,4 @@ html{
     min-width: 300px;
     max-width: 800px !important;
 }
+
