--- a/views/Blog/blogPage.ejs
+++ b/views/Blog/blogPage.ejs
@@ -39,7 +39,7 @@
                 </div>
                 
             </div>
-            <div class="col-0 col-md-4 col-lg-2 bg-primary ps-4 position-sticky" style="top: 0;">
+            <div class="col-0 col-md-4 col-lg-2 ps-4 position-sticky d-none d-md-block" style="top: 0; background-color: var(--accent-color);">
                 <div class="position-sticky py-3" style="top: 0; min-height: 100vh;">
                     <p class="h5 text-white border-bottom">Categories</p>
                       <ul class="list-unstyled">
