--- a/views/User/login.ejs
+++ b/views/User/login.ejs
@@ -17,21 +17,17 @@
 
 
 <div class="login-form container-md px-4 py-5">
-    <form action="/user/login" method="post">
+    <form action="/user/login" method="post" class="needs-validation" novalidate>
         <h1 class="h3 mb-3 fw-normal text-center">Login</h1>
         <div class="form-floating mb-3">
-            <input type="email" class="form-control" id="floatingInput" placeholder="name@example.com" name="email">
+            <input type="email" class="form-control" id="floatingInput" placeholder="name@example.com" name="email" required>
             <label for="floatingInput">Email address</label>
         </div>
         <div class="form-floating mb-3">
-            <input type="password" class="form-control" id="floatingPassword" placeholder="Password" name="password">
+            <input type="password" class="form-control" id="floatingPassword" placeholder="Password" name="password"required>
             <label for="floatingPassword">Password</label>
         </div>
-        <!-- <div class="checkbox mb-3">
-            <label>
-                <input type="checkbox" value="remember-me"> Remember me
-            </label>
-        </div> -->
+
         <button class="btn btn-primary w-100" type="submit">LogIn</button>
         <div class="w-100 text-center mt-3">
             <a href="/user/signup" class="text-decoration-none text-secondary">Register Now?</a>
