--- a/views/User/signUp.ejs
+++ b/views/User/signUp.ejs
@@ -17,26 +17,26 @@
 
 
 <div class="login-form container-md px-4 py-5">
-    <form action="/user/signup" method="post">
+    <form action="/user/signup" method="post" class="needs-validation" novalidate>
         <h1 class="h3 mb-3 fw-normal text-center">Sign Up</h1>
         <div class="form-floating mb-3">
-            <input type="text" class="form-control" id="floatingUsername" placeholder="Username" name="username">
+            <input type="text" class="form-control" id="floatingUsername" placeholder="Username" name="username" required>
             <label for="floatingUsername">Username</label>
         </div>
         <div class="form-floating mb-3">
-            <input type="text" class="form-control" id="floatingFirstName" placeholder="First Name" name="firstname">
+            <input type="text" class="form-control" id="floatingFirstName" placeholder="First Name" name="firstname" required>
             <label for="floatingFirstName">First Name</label>
         </div>
         <div class="form-floating mb-3">
-            <input type="text" class="form-control" id="floatingLastName" placeholder="Last Name" name="lastname">
+            <input type="text" class="form-control" id="floatingLastName" placeholder="Last Name" name="lastname" required>
             <label for="floatingLastName">Last Name</label>
         </div>
         <div class="form-floating mb-3">
-            <input type="email" class="form-control" id="floatingEmail" placeholder="name@example.com" name="email">
+            <input type="email" class="form-control" id="floatingEmail" placeholder="name@example.com" name="email" required>
             <label for="floatingEmail">Email address</label>
         </div>
         <div class="form-floating mb-3">
-            <input type="password" class="form-control" id="floatingPassword" placeholder="Password" name="password">
+            <input type="password" class="form-control" id="floatingPassword" placeholder="Password" name="password" required>
             <label for="floatingPassword">Password</label>
         </div>
         <button class="btn btn-primary w-100" type="submit">Sign Up</button>
