--- a/views/partials/navbar.ejs
+++ b/views/partials/navbar.ejs
@@ -1,6 +1,6 @@
 <nav class="navbar navbar-expand-lg bg-primary rounded-bottom p-0 px-md-5">
   <div class="container-fluid">
-    <a class="navbar-brand d-flex justify-content-center align-items-center" href="/">
+    <a class="navbar-brand d-flex justify-content-center align-items-center" href="/blog">
       <img src="/images/clockLogo.png" alt="Logo" width="40" height="40" class="d-inline-block align-text-top">
       <span class="text-white fs-5" style="transform: rotate(-10deg);">Timely</span>
     </a>
