--- a/views/layout/boilerplate.ejs
+++ b/views/layout/boilerplate.ejs
@@ -3,8 +3,9 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Bootstrap demo</title>
+    <title>Timely Blogs</title>
     <link rel="stylesheet" href="/stylesheet/style.css">
+    <link rel="icon" type="image/x-icon" href="/images/clockLogo.png">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <script src="https://cdn.tiny.cloud/1/<%= process.env.EDITORKEY%>/tinymce/7/tinymce.min.js" referrerpolicy="origin"></script>
     <script>
